maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
 
var a=0
var y=0
for (c <- 1 to getMondeHauteur()){
  for (i <- 1 to getMondeLargeur()){
    if (aBiscuit(i,c)){
        x=i
        y=c
      }
    }
}

setIndication(x,y,0)


def ecriture(x;y){
		var v=getIndication(x,y)
  
    if (!aMurNord && v!=9999){
      setIndication(x,y-1,v+1)
    }
		if (!aMurOuest && v!=9999){
      setIndication(x-1,y,v+1)
    }
  	if (aMurNord(x,y+1) && y<=getMondeHauteur-1 && v!=9999){
      setIndication(x,y+,v+1)
		}
		if (aMurOuest(x+1,y) && x<-getMondeLargeur -1 && v!=9999){
      setIndication(x+1,y,v+1)
		}
}
}